found 3 instances of unquoted 1st parameter {{action}} usage
https://github.com/askcom/quarry-webui/issues/4

--- a/app/templates/addPhysical_specs.hbs
+++ b/app/templates/addPhysical_specs.hbs
@@ -99,7 +99,7 @@
 <div class="btn-group">
     <button class="btn btn-primary" type="button" {{action "editInputTemplate"}}>
         {{icon name="back"}} Edit Template</button>
-    <button class="btn" type="button" {{action cancel}}>
+    <button class="btn" type="button" {{action "cancel"}}>
         {{icon name="cancel"}} Cancel</button>
     {{#unless requestErrors}}
         {{#if validated}}
