--- a/app/templates/pool.hbs
+++ b/app/templates/pool.hbs
@@ -92,7 +92,7 @@
                 <div class="row">
                     <div class="span4">
                         <label>FQDN:</label>
-                        <a href="#" {{action getAsset name}}>{{name}}</a>
+                        <a href="#" {{action "getAsset" name}}>{{name}}</a>
                     </div>
                     <div class="span2 offset1">
                         <label>Type:</label>
