enabled chef role assignment at commission time
* created Quarry.Blade API namespace
* created a simple BladeController which is currently wired for fetching a roles list from the backend API
* mimicked the existing fetch 'kickstarts' and 'layouts' data approach in the commission workflow: updated data will be fetched when entering the CommissionVm route state

Currently limited to choosing one role at commission time per host.

--- a/app/templates/commissionVm_specs.hbs
+++ b/app/templates/commissionVm_specs.hbs
@@ -15,7 +15,8 @@
                     Application Type: <strong>{{application}}</strong><br>
                     BU: <strong>{{businessUnit}}</strong><br>
                     Owner E-mail: <strong>{{ownerEmail}}</strong><br>
-                    Owning Group: <strong>{{ownerGroup}}</strong><br><br>
+                    Owning Group: <strong>{{ownerGroup}}</strong><br>
+                    Chef Role: <strong>{{chefRole}}</strong><br><br>
                 </dd>
                 <dt>Hypervisor:</dt>
                 <dd>{{view Em.Select
@@ -180,6 +181,13 @@
                     <label>Owning Group</label>
                     {{view Em.TextField
                     valueBinding="ownerGroup" class="span3"}}
+                </div>
+                <div class="span3">
+                    <label>Chef Role</label>
+                    {{view Em.Select
+                    prompt="Select a role...."
+                    contentBinding="controller.roles"
+                    valueBinding="chefRole" class="span3"}}
                 </div>
             </div>
         </div>
