--- a/app/templates/commissionVm.hbs
+++ b/app/templates/commissionVm.hbs
@@ -187,6 +187,20 @@
                     valueBinding="ownerGroup" class="span3"}}
                 {{/if}}
             </div>
+            <div class="span3">
+                <label>Chef Role</label>
+                {{#if distinctChefRoles}}
+                    {{view Em.Select
+                    prompt="<replace existing selections>"
+                    contentBinding="roles"
+                    valueBinding="chefRole" class="span3"}}
+                {{else}}
+                    {{view Em.Select
+                    prompt="Select a role...."
+                    contentBinding="roles"
+                    valueBinding="chefRole" class="span3"}}
+                {{/if}}
+            </div>
         </div>
     </div>
     <div class="container">
