renamed Quarry.Serp.search() to Quarry.Serp.find()
two reasons:

- We're now using it in all its CRUD.find() glory
- Slightly more readable code, as search() is a built-in String method

--- a/app/templates/localeStats.hbs
+++ b/app/templates/localeStats.hbs
@@ -1,7 +1,7 @@
 <div class="well">
     <p class="lead">
         {{#if locale}}
-            <a href="#" {{action "search"}}><span {{bind-attr id=locale}}>{{hypervisors.length}} hypervisors in {{locale}}</span></a>
+            <a href="#" {{action "find"}}><span {{bind-attr id=locale}}>{{hypervisors.length}} hypervisors in {{locale}}</span></a>
         {{else}}
             {{hypervisors.length}} hypervisors
         {{/if}}
