--- a/app/templates/navbar.hbs
+++ b/app/templates/navbar.hbs
@@ -294,7 +294,7 @@
                 {{view Em.TextField class="search-query"
                 placeholder="Search by FQDN"
                 valueBinding="searchFieldVal"
-                action="search"}}
+                action="fqdnSearch"}}
             </div>
 
         </div>
