a totally refactored login paradigm
- no more horrible pseudoclassical mantel.js, replaced (for now) with a simple singleton object (kept the name mantel.js)
- added a login route and controller to support in-app logins (no more URL redirection to a separate Ember app)
- quarry-data.js gets lots of configuration cleanup
- added Quarry.User client API wrapper

There is still some potentially I/O-blocking stuff we'll want to clean up (cookie getters/setters, for example), but this is a vast improvement.

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,2 +1,2 @@
-<legend xmlns="http://www.w3.org/1999/html">{{icon name="homePage"}}Welcome to Quarry!</legend>
+<legend>{{icon name="homePage"}}Welcome to Quarry!</legend>
 {{render "cloudStats"}}
