added 'hasFailedJobs' computed property to inform presentation layer of failed recent jobs
and added a simple red-colored icon in the navbar when there are failed jobs

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -250,3 +250,8 @@ span[rel="popover"] {
 .buttonLink:hover {
     text-decoration: none;
 }
+
+/* color emphasis for failed jobs in jobs list */
+.failed-jobs {
+    color: #b94a48
+}
