renamed 'Kickstart' references in codebase to 'OS Target'
- "kickstart" variables and object references become "osTarget"
- "Kickstart" class name references become "OsTargets"

--- a/app/templates/asset_rekick.hbs
+++ b/app/templates/asset_rekick.hbs
@@ -27,11 +27,11 @@
         <dl class="dl-horizontal font-awesome-dt">
             <dt>OS:</dt>
             <dd>{{view Em.Select
-            prompt="Select Kickstart Option...."
-            contentBinding="kickstarts"
+            prompt="Select OS Target Option...."
+            contentBinding="osTargets"
             optionValuePath="content.name"
             optionLabelPath="content.name"
-            valueBinding="kickstart"}}<br>
+            valueBinding="osTarget"}}<br>
             </dd>
             <dt>Layout:</dt>
             <dd>{{view Em.Select
