--- a/app/templates/osTargets.hbs
+++ b/app/templates/osTargets.hbs
@@ -1,6 +1,6 @@
-<legend>{{icon name="kickstartsPage"}}Kickstart Targets</legend>
+<legend>{{icon name="osTargetsPage"}}OS Targets</legend>
 {{#if isLoading}}
-    <p id="search-in-progress">Refreshing kickstarts list from the db....</p>
+    <p id="search-in-progress">Refreshing OS Targets list from the db....</p>
     <div class="progress progress-striped active">
         <div class="bar" style="width: 100%;"></div>
     </div>
