renamed 'Network' references in codebase to 'Networks' to match new API routepath
Also some other minor rationalizations to bring the client API code in line with the refactored backend.

--- a/app/templates/pool.hbs
+++ b/app/templates/pool.hbs
@@ -78,8 +78,8 @@
                         <label>Network:</label>
                         {{view Em.Select
                         contentBinding="networks"
-                        optionValuePath="gateway"
-                        optionLabelPath="gateway"
+                        optionValuePath="content.gateway"
+                        optionLabelPath="content.name"
                         valueBinding="network"
                         class="span3"}}
                     </div>
