--- a/app/templates/layouts.hbs
+++ b/app/templates/layouts.hbs
@@ -22,8 +22,8 @@
             <tbody>
                 {{#each controller}}
                 <tr>
-                    <td>{{partlayout_id}}</td>
-                    <td><a href="#" {{action "getLayout" partlayout_id}}>{{name}}</a></td>
+                    <td>{{layout_id}}</td>
+                    <td><a href="#" {{action "getLayout" layout_id}}>{{name}}</a></td>
                     <td><p class="text-success">
                         {{#if base}}{{icon name="check"}}{{else}}{{/if}}
                     </p></td>
