--- a/app/templates/mortarBulk.hbs
+++ b/app/templates/mortarBulk.hbs
@@ -35,7 +35,7 @@
                         <dd>{{osName}} ({{content.kwargs.kstarget.id}})<br>
                         </dd>
                         <dt>Layout:</dt>
-                        <dd>{{layoutName}} ({{content.kwargs.layout.partlayout_id}})<br>
+                        <dd>{{layoutName}} ({{content.kwargs.layout.layout_id}})<br>
                         </dd>
                     </dl>
                 </div>
