enabled auto-IP address detection and search
and introduced a VIP-specific font awesome icon

--- a/app/templates/vip.hbs
+++ b/app/templates/vip.hbs
@@ -1,4 +1,4 @@
-<legend>{{icon name="poolsPage"}}VIP {{name}}</legend>
+<legend>{{icon name="vipPage"}}VIP {{name}}</legend>
 {{#if isLoading}}
     <p id="search-in-progress">Retrieving VIP details from the API....</p>
     <div class="progress progress-striped active">
