--- a/app/templates/vips.hbs
+++ b/app/templates/vips.hbs
@@ -1,4 +1,4 @@
-<legend>{{icon name="poolsPage"}}VIPs</legend>
+<legend>{{icon name="vipPage"}}VIPs</legend>
 {{#if isLoading}}
     <p id="search-in-progress">Retrieving VIPs from the API....</p>
     <div class="progress progress-striped active">
