--- a/app/templates/bigIp.hbs
+++ b/app/templates/bigIp.hbs
@@ -1,4 +1,4 @@
-<legend>{{icon name="poolsPage"}}BigIP Search</legend>
+<legend>{{icon name="vipPage"}}BigIP Search</legend>
 <div class="container">
     <form>
         <div class="row">
@@ -23,8 +23,13 @@
                 <div class="bar" style="width: 100%;"></div>
             </div>
         {{else}}
-            <button class="btn btn-primary" type="submit" {{action "search"}}>
-                {{icon name="search"}} Find VIP</button>
+            {{#if ready}}
+                <button class="btn btn-primary" type="submit" {{action "search"}}>
+                    {{icon name="search"}} Find VIP</button>
+            {{else}}
+                <button class="btn" disabled>
+                    {{icon name="search"}} Find VIP</button>
+            {{/if}}
             {{#unless findToken}}
                 {{#if dc}}
                     <button class="btn btn-warning" type="submit" {{action "searchDcs"}}>
@@ -35,7 +40,7 @@
         {{#if failedSearch}}
             <br><br>
             <div class="alert alert-error">
-                No VIP found with name {{findToken}}
+                No VIP found with name {{failedSearchToken}} in {{failedSearchDc}}
             </div>
         {{/if}}
     </form>
