made the "go back" button on the VIP page a bit more intelligent
if we came by way of a "all VIPs in a DC" search we re-do that DC search, if we came by way of a specific VIP search, we go back to the BigIP search page

also made auto IP address form detection reusable (so we can tell the user what type of search he/she's performing) and; and we now include the DC in the search-in-progress message

--- a/app/templates/bigIp.hbs
+++ b/app/templates/bigIp.hbs
@@ -17,7 +17,7 @@
             {{#if dcSearch}}
                 <p id="search-in-progress">Getting all VIPs in <strong>{{dcToUpper}}</strong> from the API....</p>
             {{else}}
-                <p id="search-in-progress">Looking up VIP name <strong>{{findToken}}</strong> from the API....</p>
+                <p id="search-in-progress">Looking up VIP {{#if isIpSearch}}IP address{{else}}name{{/if}} <strong>{{findToken}}</strong> in <strong>{{dcToUpper}}</strong> from the API....</p>
             {{/if}}
             <div class="progress progress-striped active">
                 <div class="bar" style="width: 100%;"></div>
