--- a/app/templates/vip.hbs
+++ b/app/templates/vip.hbs
@@ -52,7 +52,7 @@
     </div>
     <ul class="pager">
         <li class="previous">
-            {{link-to "&larr; Back to BigIP Search" "bigIp"}}
+            <a href="#" {{action "lastSearch"}}>&larr; Back to BigIP Search</a>
         </li>
     </ul>
 {{/if}}
