'osTarget' references brought up-to-date with refactor
'id' property has been renamed to 'target_id'

--- a/app/templates/mortarBulk.hbs
+++ b/app/templates/mortarBulk.hbs
@@ -32,7 +32,7 @@
                     <p class="lead">Using the following configuration:</p>
                     <dl class="dl-horizontal font-awesome-dt">
                         <dt>OS:</dt>
-                        <dd>{{osName}} ({{content.kwargs.kstarget.id}})<br>
+                        <dd>{{osName}} ({{content.kwargs.target.id}})<br>
                         </dd>
                         <dt>Layout:</dt>
                         <dd>{{layoutName}} ({{content.kwargs.layout.layout_id}})<br>
