added BigIP implementation

--- a/app/templates/navbar.hbs
+++ b/app/templates/navbar.hbs
@@ -91,6 +91,12 @@
                                 Pools
                             {{/link-to}}
                         </li>
+                        <li>
+                            {{#link-to "bigIp"}}
+                                {{icon name="vips"}}
+                                VIPs
+                            {{/link-to}}
+                        </li>
                         <li class="divider"></li>
                         <li>
                             {{#link-to "dnsSync"}}
