to support browser history API routes + apache rewrite rules, all of our relative src links need to be absolute (e.g., "/images/favicon.png" instead of "images/favicon.png"

--- a/app/templates/navbar.hbs
+++ b/app/templates/navbar.hbs
@@ -3,7 +3,7 @@
     <div class="navbar-inner">
         <div class="container">
             {{#view App.VersionView class="brand" id="quarryLogo"}}
-                {{#link-to "index"}}<img src="images/quarry.png">{{/link-to}}
+                {{#link-to "index"}}<img src="/images/quarry.png">{{/link-to}}
             {{/view}}
 
             <!-- The following unordered lists with a class of "pull-right"
