--- a/app/templates/asset.hbs
+++ b/app/templates/asset.hbs
@@ -368,7 +368,7 @@
             <hr>
             <ul class="pager">
                 <li class="previous">
-                    {{link-to "&larr; Search Results" "serp"}}
+                    {{link-to "&larr; Search Results" "serp" serpContent}}
                 </li>
             </ul>
             {{/if}}
