disabled network stats on networks page, too many backend calls

--- a/app/templates/networks.hbs
+++ b/app/templates/networks.hbs
@@ -18,7 +18,7 @@
                 <th>Netmask</th>
                 <th>DNS 1</th>
                 <th>DNS 2</th>
-                <th>Availability</th>
+                <!--<th>Availability</th>-->
                 <th></th>
             </tr>
             </thead>
@@ -32,7 +32,7 @@
                     <td>{{netmask}}</td>
                     <td>{{dns1}}</td>
                     <td>{{dns2}}</td>
-                    <td>{{render "networkStatsSummary" this}}</td>
+                    <!--<td>{{render "networkStatsSummary" this}}</td>-->
                     <td>
                         {{#link-to "network.delete" this}}
                             {{icon name="delNetwork"}}
