changing the "Cancel" button action on advanced search to just go to the home page
working out how to go to the "most recent search" in all situations (including when there wasn't a previous search) is more work than this feature is worth

--- a/app/templates/advancedSearch.hbs
+++ b/app/templates/advancedSearch.hbs
@@ -268,8 +268,9 @@
     <button class="btn btn-primary" type="submit" {{action "submit"}}>
         {{icon name="search"}} Search</button>
     <button class="btn" type="button" {{action "reset"}}>Reset</button>
-    <button class="btn" type="button" {{action "goSerp"}}>
-        {{icon name="cancel"}} Cancel</button>
+    {{#link-to "index"}}
+        <button class="btn" type="button">{{icon name="cancel"}} Cancel</button>
+    {{/link-to}}
 </div>
 </form>
 {{#if submittedEmpty}}
