Expose asset id and vm vnc port in asset details
Prior to this commit the asset id value and vm vnc port information was
not exposed in the asset details template. Not having these values
quickly accessible has resulted in a number of user complaints.

We now expose the asset id in the general tab and the vnc port in the vm
tab of assets with corresponding vm records.

commit 7fd166a7e910c497bdef0193b735b706a5e533eb
Author: Richard Marshall <richard.marshall@ask.com>
Date:   Mon Sep 15 16:44:10 2014 -0700

    Add vnc information to asset vm tab

--- a/app/templates/asset.hbs
+++ b/app/templates/asset.hbs
@@ -63,8 +63,11 @@
             <div id="asset_detail" class="tab-content">
                 <div class="tab-pane fade in active" id="general">
                     <div class="row">
-                        <div class="span5"><label>FQDN:</label>
-                            {{view Em.TextField class="span5" valueBinding="content.FQDN"}}
+                        <div class="span4"><label>FQDN:</label>
+                            {{view Em.TextField class="span4" valueBinding="content.FQDN"}}
+                        </div>
+                        <div class="span1"><label>ID:</label>
+                            <span class="span1 uneditable-input">{{content.id}}</span>
                         </div>
                         <div class="span3"><label>Application Type:</label>
                             {{view Em.Select class="span3"
@@ -156,6 +159,15 @@
                                 valueBinding="vm.cpus"}}
                             </div>
                         </div>
+                        {{#if vm.vnc}}
+                        <hr/>
+                        <div class="row">
+                            <div class="span5">
+                                <label>VNC:</label>
+                                vnc://{{vm.hypervisor}}:{{vm.vnc}}
+                            </div>
+                        </div>
+                        {{/if}}
                     </div>
                     {{/if}}
                     {{#if hypervisor}}
