Display related asset in job views
This commit adds logic to lookup the FQDN of an asset that is acted upon
by a job. This is done either by extracting the FQDN from the job
args/kwargs or by making a call to the Asset history API with an
asset_id.

The fetched FQDN is then displayed on the job list and job details views
as a link to the corresponding asset details view.

--- a/app/templates/job.hbs
+++ b/app/templates/job.hbs
@@ -41,6 +41,10 @@
             {{/if}}
             <dt>Module</dt>
             <dd>{{module}}</dd>
+            {{#if fqdn}}
+            <dt>Asset</dt>
+            <dd>{{#link-to "asset" fqdn}}{{fqdn}}{{/link-to}}</dd>
+            {{/if}}
             {{#if hasArgs}}
                 {{#if longArgs}}
                     <dt>Args</dt>
